[package]
name = "nutt-web"
version = "0.0.0"
edition = "2021"

[workspace]
members = ['.', 'src/modules/router/nutt-web-macro']

[dependencies]
tokio = {version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
nutt-web-macro = {version = "*", path = "src/modules/router/nutt-web-macro" }