[package]
name = "nutt-web"
version = "0.0.0"
edition = "2021"
description = "New modern backend web framework focused in microservice infrastructure"
license = "Apache-2.0"

[workspace]
members = ['.', 'src/modules/nutt-web-macro',"test/integration_test/main"]

[dependencies]
tokio = {version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
nutt-web-macro = {version = "*", path = "src/modules/nutt-web-macro" }
chrono = "0.4.38"
whirlpool = {version = "0.10.4" }
base64ct = { version = "1.6.0", features = ["alloc"] }

