[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
nutt-web = {path = "../../../"}
tokio = {version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"